--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
   <!-- user$ | async as user ; else login -->
   <div class="links">
     <a mat-button routerLink="/characters">Characters</a>
-    <a mat-button routerLink="/add">About</a>
+    <a mat-button routerLink="/comics">Comics</a>
     <a mat-button routerLink="/">Contact</a>
   </div>
 </mat-toolbar>
