add material to login page

--- a/src/app/shared/ui/components/button/button.component.html
+++ b/src/app/shared/ui/components/button/button.component.html
@@ -1,2 +1,3 @@
-<button type="buttonType" class="button" (click)="onClick()" [disabled]="isDisabled">{{ buttonText }}
+<button color="primary" mat-flat-button type="buttonType" class="button" (click)="onClick()" [disabled]="isDisabled">{{
+  buttonText }}
 </button>
