--- a/src/app/shared/ui/components/validation-errors/validation-errors.component.scss
+++ b/src/app/shared/ui/components/validation-errors/validation-errors.component.scss
@@ -1,6 +1,9 @@
 .dvs-validation-errors {
   margin: 0;
   padding-left: 16px;
+  position: relative;
+  top: -15px;
+
 
   li {
     margin-top: 4px;
