--- a/src/app/shared/ui/components/button/button.component.scss
+++ b/src/app/shared/ui/components/button/button.component.scss
@@ -1,17 +1,18 @@
-@import '../../../../../styles/colors.scss';
+// @import '../../../../../styles/colors.scss';
+@import '@styles/colors.scss';
 
 button.button {
-  border: 0;
-  border-radius: 12px;
-  padding: 10px;
-  min-width: 130px;
-  margin: 25px 0;
-  background-color: $color-red;
+  // border: 0;
+  // border-radius: 12px;
+  // padding: 10px;
+  // min-width: 130px;
+  // margin: 25px 0;
+  // background-color: $color-red;
   width: 100%;
 
-  &[disabled] {
-    cursor: not-allowed;
-    background-color: #f2f2f2 !important;
-    color: rgba(148, 152, 155, 0.5) !important;
-  }
+  // &[disabled] {
+  //   cursor: not-allowed;
+  //   background-color: #f2f2f2 !important;
+  //   color: rgba(148, 152, 155, 0.5) !important;
+  // }
 }
