--- a/src/app/shared/ui/components/input/input.component.scss
+++ b/src/app/shared/ui/components/input/input.component.scss
@@ -1,25 +1,30 @@
-.dvs-form-control {
+// .dvs-form-control {
 
-  label,
-  input {
-    display: block;
-  }
+//   label,
+//   input {
+//     display: block;
+//   }
 
-  label {
-    margin-bottom: 4px;
-    font-weight: 600;
+//   label {
+//     margin-bottom: 4px;
+//     font-weight: 600;
 
-    &.required {
-      &:after {
-        content: "*";
-        color: red;
-      }
-    }
-  }
+//     &.required {
+//       &:after {
+//         content: "*";
+//         color: red;
+//       }
+//     }
+//   }
 
-  input {
-    box-sizing: border-box;
-    padding: 8px;
-    width: 100%;
-  }
+//   input {
+//     box-sizing: border-box;
+//     padding: 8px;
+//     width: 100%;
+//     height: 0;
+//   }
+// }
+
+.full-width {
+  width: 100%;
 }
